# web_project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml
app/api/routes/: test.py
app/core/: config.py
app/templates/: index.html
jitsi-custom/: config.js  custom.css  custom.js  interface_config.js
tests/: test_routes.py
